<resources>
    <string name="app_name">MySixthApp</string>
    <string name="action_settings">Settings</string>
    <string name="username_text">User Name :</string>
    <string name="password_text">Password :</string>
    <string name="submit_button">Submit</string>
    <string name="button_newaccount">Get New Account</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="user_text">User Name :</string>
    <string name="pass_text">Password :</string>
    <string name="signup_button">Sign Up</string>
    <string name="title_activity_experiment">Experiment</string>
    <string name="title_activity_user">User</string>
    <string name="name_text">Hello ,</string>
    <string name="experiment_button">Start Experiment</string>
    <string name="logout_button">Logout</string>
    <string name="exit_button">Exit</string>
    <string name="stop_button">Stop</string>
    <string name="back_button">Back</string>
</resources>
